--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
 <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js" crossorigin></script>
 <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 
+<script type="text/babel" src="./app.js"></script>
 <script type="text/babel" src="./script.js"></script>
 
 </html>
